refactor Untangle to Ung
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@15133 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/css/main.css
+++ b/uvm-lib/servlets/webui/root/css/main.css
@@ -303,17 +303,17 @@ div.configButton {
 	width:161px;
 	height:45px;
 }
-div.untangleButton {
+div.utgButton {
 	cursor: pointer;
 	background-color: #E9E9E9;
 	border: 1px solid #9B9B9B;
 }
-div.untangleButtonHover {
+div.utgButtonHover {
 	border-color:#366dba;
 	color:#366dba;
 	background-color:#f1f6fc;
 }
-div.untangleButtonInvalid {
+div.utgButtonInvalid {
 	border: 1px solid green;
 }
 button.add {
