components in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@15203 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/skin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/skin.css
@@ -358,4 +358,19 @@ div.inputLine span.formw {
   float: right;
   width: 235px;
   text-align: left;
-} 
+}
+div.buttonHelpPos {
+	position:absolute;
+	left:10px;
+	bottom:5px;
+}
+div.buttonCancelPos {
+	position:absolute;
+	right:100px;
+	bottom:5px;
+}
+div.buttonUpdatePos {
+	position:absolute;
+	right:10px;
+	bottom:5px;
+}
