save changed data in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@15234 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/skin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/skin.css
@@ -332,8 +332,8 @@ div.editRow {
 	width: 100%;
 	cursor: pointer;
 }
-div.removeRow {
-	background-image:url(../images/removeRow.gif);
+div.deleteRow {
+	background-image:url(../images/deleteRow.gif);
 	background-position:center;
 	background-repeat:no-repeat;
 	width: 100%;
@@ -373,4 +373,13 @@ div.buttonUpdatePos {
 	position:absolute;
 	right:10px;
 	bottom:5px;
+}
+.grid-row-deleted {
+	background-color: #FF5151;
+}
+.grid-row-added {
+	background-color: #21FF3A;
+}
+.grid-row-modified {
+	background-color: #FFB364;
 }
