--- a/uvm-lib/servlets/webui/root/skins/default/css/skin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/skin.css
@@ -4,7 +4,7 @@
 	text-align:center;
 	height:100%;
 }
-#contentright {
+.contentright {
 	background: transparent url(../images/main/background_right.png) repeat !important;
 }
 #racks {
@@ -142,9 +142,7 @@ div.nodeHelpButton {
 	width:120px;
 }
 .nodeSettingsIcon {
-	background:transparent url(../images/node/IconControlsClosed28x28.png) no-repeat scroll -5px -6px !important;  
-	width:18px;
-	height:16px;
+	background:transparent url(../images/main/icon_settings.png) no-repeat !important;  
 }
 div.windowBackground {
 	background: transparent url(../images/LightGreyBackground1600x100.png) repeat-y;
@@ -160,7 +158,7 @@ div.nodeRemoveButton {
 	bottom:14px;
 }
 .nodeRemoveIcon {
-	background:transparent url(../images/node/IconRemove_16x16.png) no-repeat !important; 
+	background:transparent url(../images/main/icon_remove.png) no-repeat !important; 
 	width:16px;
 	height:16px;
 }
@@ -170,7 +168,7 @@ div.nodeCancelButton {
 	bottom:14px;
 }
 .cancelIcon {
-	background:transparent url(../images/node/IconCancel_16x16.png) no-repeat !important; 
+	background:transparent url(../images/main/icon_cancel.png) no-repeat !important; 
 	width:16px;
 	height:16px;
 }
@@ -180,7 +178,7 @@ div.nodeSaveButton {
 	bottom:14px;
 }
 .saveIcon {
-	background:transparent url(../images/node/IconSave_23x16.png) no-repeat !important; 
+	background:transparent url(../images/main/icon_save.png) no-repeat !important; 
 	width:23px;
 	height:16px;
 }
