left side navigation graphic display in progress
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/branch/prod/web-ui/work/src@15883 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/webui/root/skins/default/css/skin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/skin.css
@@ -466,6 +466,17 @@ div.appItem div.buttonPosB {
 	color: green;
 	padding-right: 16px;
 }
+div.appItem div.statePos {
+	position: absolute;
+	left: 53px;
+	top: 34px;
+	cursor: pointer;
+	height: 15px;
+	font-family: verdana, sans-serif;
+	font-size: 10px;
+	font-weight: bold;
+	color: red;
+}
 div.iconInfo {
 	background:transparent url(../images/main/icon_info.png) no-repeat center right !important;
 }
