--- a/uvm-lib/servlets/webui/root/skins/default/css/skin.css
+++ b/uvm-lib/servlets/webui/root/skins/default/css/skin.css
@@ -466,3 +466,27 @@ div.iconArrowRight {
 div.iconArrowDown {
 	background:transparent url(../images/main/icon_arrow_down.png) no-repeat center right !important;
 }
+
+.iconBreadcrumbsSeparator {
+    background:transparent url(../images/main/icon_breadcrumbs_separator.gif) no-repeat center center !important;
+    width:13px;
+    height:12px;
+}
+
+.breadcrumbText {
+    font-size:11px; /* On a base font of 13px works out to 11.05px*/
+    font-size-adjust:none;
+    font-style:normal;
+    font-variant:normal;
+    line-height:14px; /* works out to 14px */
+    font-family:arial,helvetica,"FreeSans","Utkal","Nimbus Sans L","Malayalam","Phetsarath OT","Garuda",clean,sans-serif;
+}
+.breadcrumbLink {
+	font-size:11px; /* On a base font of 13px works out to 11.05px*/
+	font-size-adjust:none;
+	font-style:normal;
+	font-variant:normal;
+	line-height:14px; /* works out to 14px */
+	font-family:arial,helvetica,"FreeSans","Utkal","Nimbus Sans L","Malayalam","Phetsarath OT","Garuda",clean,sans-serif;
+	color: #20377A;
+}
